# src/MartinDrozdik.DDD.Testing/Errors/ErrorEndpoints.cs
@@ -33,6 +33,12 @@ public static class ErrorEndpoints
             .Produces<ProblemDetails>(StatusCodes.Status500InternalServerError)
             .Produces<HttpValidationProblemDetails>(StatusCodes.Status400BadRequest);
 
+        /*group.MapGet("not-found-exception", GetNotFound)
+            .Produces<string>(StatusCodes.Status200OK, MediaTypeNames.Application.Json)
+            .Produces<ProblemDetails>(StatusCodes.Status404NotFound)
+            .Produces<ProblemDetails>(StatusCodes.Status500InternalServerError)
+            .Produces<HttpValidationProblemDetails>(StatusCodes.Status400BadRequest);
+        */
         group.MapGet("business-rule-exception", GetBusinessRuleException)
             .Produces<string>(StatusCodes.Status200OK, MediaTypeNames.Application.Json)
             .Produces<ProblemDetails>(StatusCodes.Status404NotFound)
@@ -58,6 +64,18 @@ public static class ErrorEndpoints
     {
         throw new Exception("This is a general exception");
     }
+
+    /*private static async Task<string> GetNotFound()
+    {
+        throw new BusinessNotFoundException("Could not find this mate.")
+        {
+            Details =
+            [
+                new ExceptionDetail("Error1", "This is error message 1"),
+                new ExceptionDetail("Error2", "This is error message 2")
+            ],
+        };
+    }*/
 
     private static string GetBusinessRuleException()
     {
